# telethon_bot

./: .dockerignore  .gitignore  anon.session  config.py  file_parser.py  main.py  main_sender.py  prompt.txt  pyproject.toml  send _in_channel.py  send_comment.py  send_post.py  telegram_client.py  uv_start_telethone.bat
test/: get_info.py  send _in_channel.py  send_document.py  send_in_grup.py
